# tickerpulse

./: .env  .env.example  docker-compose.yaml  pyproject.toml  requirements.txt
common/: models.py
producer/: Dockerfile  README.md  main.py
tests/: test_integration.py  test_logic.py
worker/: Dockerfile  README.md  alert_engine.py  requirements.txt
